As a guest or user I want to see see a list of available events. [Delivers #183639046]
